# GDAPI-cpp

./: CMakeLists.txt
src/: CMakeLists.txt  Level.cc  LevelsManager.cc
src/include/gdapi/: Level.hh  LevelsManager.hh  LevelsManagerFactory.hh
src/include/gdapi/tools/: GDPlist.hh  MemoryBlock.hh
src/include/gdapi/tools/crypt/: GDCoder.hh
src/platform/: LevelsManagerFactory_win.cc
src/tools/: GDPlist.cc  MemoryBlock.cc
src/tools/crypt/: GDBase64.cc  GDBase64.hh  GDCoder.cc  GDPack.cc  GDPack.hh  GDXor.cc  GDXor.hh
src/tools/crypt/z/: CMakeLists.txt
tests/: CMakeLists.txt  CreateLevelsManager.cpp  PListCreate.cc
utils/: CMakeLists.txt  unpack_local.cc
